--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -2,35 +2,19 @@ name: Linters
 
 on: pull_request
 
-env:
-  FORCE_COLOR: 1
-
 jobs:
-  eslint:
-    name: ESLint
+  rubocop:
+    name: Rubocop
     runs-on: ubuntu-18.04
+
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-ruby@v1
         with:
-          node-version: "12.x"
-      - name: Setup ESLint
+          ruby-version: ">=3.0.x"
+      - name: Setup Rubocop
         run: |
-          npm install --save-dev eslint@7.11.x eslint-config-airbnb@18.1.x eslint-plugin-import@2.22.x eslint-plugin-jsx-a11y@6.2.x eslint-plugin-react@7.20.x eslint-plugin-react-hooks@2.5.x babel-eslint@10.1.x
-          [ -f .eslintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/react-redux/.eslintrc.json
-      - name: ESLint Report
-        run: npm run format
-  stylelint:
-    name: Stylelint
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-      - name: Setup Stylelint
-        run: |
-          npm install --save-dev stylelint@13.3.x stylelint-scss@3.17.x stylelint-config-standard@20.0.x stylelint-csstree-validator
-          [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/react-redux/.stylelintrc.json
-      - name: Stylelint Report
-        run: npm run format
+          gem install --no-document rubocop -v '>= 1.0, < 2.0' # https://docs.rubocop.org/en/stable/installation/
+          [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ruby/.rubocop.yml
+      - name: Rubocop Report
+        run: rubocop --color
